src/test/deca/syntax/valid/created/demo.deca
// Description :
//    test de demonstration
//
// Resultats :
//		

class A {

	protected int x;
	
	int getX(){
		return x ;
	}
	
}
	
	
{

	a.x;
	a.geX(0);
}