src/test/deca/syntax/invalid/created/class/param_missing_ident.deca
// Description :
//    decl method, manque indent du param
//
// Resultats :
//		Syntaxe error

class A {

	a a(a){
	}
}
